--- a/client/web/config/Makefile.am
+++ b/client/web/config/Makefile.am
@@ -17,22 +17,27 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
+sbin_SCRIPTS = ovd-webclient-config
+
 default_DATA = config.inc.php
 defaultdir = $(datadir)/ulteo/webclient/default
 
 conf_DATA = config.inc.php apache2.conf
 confdir = $(sysconfdir)/ulteo/webclient
 
+ovd-webclient-config: ovd-webclient-config.in
+	sed "s/@PKG_VERSION@/$(PACKAGE_VERSION)/g" $< > $@
+
 apache2.conf: apache2.conf.in
-	sed "s,@DATADIR@,$(datadir)," < $(srcdir)/apache2.conf.in > $@
+	sed "s,@DATADIR@,$(datadir)," < $(srcdir)/$< > $@
 
 install-data-hook:
 	CONFFILE=$(DESTDIR)$(confdir)/config.inc.php ;\
 	sed -i "s/@SESSION_MANAGER@/127.0.0.1/" $$CONFFILE
 
-EXTRA_DIST = $(default_DATA) apache2.conf.in
+EXTRA_DIST = $(default_DATA) apache2.conf.in ovd-webclient-config.in
 
 clean-local:
-	rm -f apache2.conf
+	rm -f apache2.conf ovd-webclient-config
 
 .PHONY: $(conf_DATA)
