Improvement: put available configuration items on the configuration file
git-svn-id: file:///home/code/svn/ovd/trunk@6536 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -1,3 +1,9 @@
 session_manager = @SESSION_MANAGER@
 
 LOG_LEVEL = error warn info debug
+
+# bind the gateway on a specific address, default is any (0.0.0.0)
+#GATEWAY_ADDRESS = 0.0.0.0
+
+# bind the gateway on a specific port, default is 443
+#GATEWAY_PORT = 443
