Add sub directory Makefile for pictures
git-svn-id: file:///home/code/svn/ovd/trunk@6550 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,6 +2,8 @@
 
 DIST?=dist
 
+SUBDIRS=img
+
 SRC=\
 	Architecture.xml \
 	Easy_Installation.xml \
@@ -67,8 +69,9 @@ install: all
 	install default.css	$(DIST)
 	install $(DST) 		$(DIST)
 	install $(PDF) 		$(DIST)
-	cp      -R img       	$(DIST)/img
-#	svn export --force img  $(DIST)/img
+	@for d in $(SUBDIRS); do \
+		$(MAKE) -w -C $$d $(MAKECMDGOALS) DIST=$(abspath $(DIST))/$$d; \
+	done
 
 uninstall:
 	rm 	-rf          	$(DIST)
