Bugfix: fix the previous commit
git-svn-id: file:///home/code/svn/ovd/trunk@6575 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -271,6 +271,8 @@
         <pathelement location="required_libraries/jpedal.jar"/>
         <pathelement location="required_libraries/jshortcut.jar"/>
         <pathelement location="required_libraries/image4j.jar"/>
+        <pathelement location="required_libraries/commons-httpclient-3.0.1.jar" />
+        <pathelement location="required_libraries/commons-logging-1.1.1.jar" />
       </classpath>
     </javac>
     <exec executable="make" failonerror="true" dir="windowsPathsJNI">
