Packaging: bugfix: insert a new ULteo icon for native client
git-svn-id: file:///home/code/svn/ovd/trunk@6590 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -224,13 +224,15 @@
     <copy file="scripts/OVDNativeClient" todir="${bindir}" />
     <copy file="misc/ulteo-ovd-native-client.desktop"
           todir="${datadir}/applications" />
+    <copy file="icons/ulteo.png" todir="${datadir}/icons" />
   </target>
 
   <target name="ovdNativeClient.jar" depends="ovdNativeClient">
     <unjar dest="build">
       <filelist dir="required_libraries"
                 files="gnu-getopt.jar, log4j-1.2.jar, registry.jar,
-                       jshortcut.jar, image4j.jar, ini4j.jar, jpedal.jar commons-httpclient-3.0.1.jar commons-logging-1.1.1.jar" />
+                       jshortcut.jar, image4j.jar, ini4j.jar, jpedal.jar,
+                       commons-httpclient-3.0.1.jar, commons-logging-1.1.1.jar" />
     </unjar>
     <antcall target="ovdNativeClient_jar" />
     <jar destfile="jars/OVDNativeClient.jar" basedir="build">
