Backport from trun rev6649: Improvement: less verbosity during doc generation
git-svn-id: file:///home/code/svn/ovd/branches/3.0@6679 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -57,7 +57,7 @@ Support_openSUSE_11.3.xml: Support_SLES_11.SP1.xml
 	xsltproc style/xhtml.xsl $< >$@
 
 %.pdf:  %.xml.out
-	dblatex -t pdf -T db2latex -p style/latex.xsl $< -o $@
+	dblatex -t pdf -T db2latex -p style/latex.xsl $< -o $@ >/dev/null 2>&1
 
 %.anw: %.xml
 	xsltproc --xinclude style/anw.xsl $< >$@
