Updating phpCAS to v1.2.1
git-svn-id: file:///home/code/svn/ovd/trunk@6687 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/PEAR/CAS/Makefile.am
+++ b/SessionManager/web/PEAR/CAS/Makefile.am
@@ -1,6 +1,7 @@
-SUBDIRS = PGTStorage languages
+SUBDIRS = languages PGTStorage Request
 
-scripts_DATA = client.php domxml-php4-php5.php
+scripts_DATA = client.php \
+               CookieJar.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/PEAR/CAS
 
