--- a/client/web/web/PEAR/Makefile.am
+++ b/client/web/web/PEAR/Makefile.am
@@ -1,1 +1,7 @@
-SUBDIRS = HTTP Net
+SUBDIRS = CAS HTTP Net
+
+scripts_DATA = CAS.php
+
+scriptsdir = $(datadir)/ulteo/webclient/PEAR
+
+EXTRA_DIST = $(scripts_DATA)
