Packaging: add a missing libcommons-httpclient-java dependency for native client on Debian based OS
git-svn-id: file:///home/code/svn/ovd/trunk@6703 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -255,8 +255,9 @@
     <jar destfile="jars/OVDNativeClient.jar" basedir="build">
       <manifest>
         <attribute name="Main-Class" value="org.ulteo.ovd.client.NativeClient"/>
-        <attribute name="Class-Path" value="/usr/share/java/gnu-getopt.jar
-                                            /usr/share/java/log4j-1.2.jar"/>
+        <attribute name="Class-Path"
+                   value="/usr/share/java/gnu-getopt.jar /usr/share/java/log4j-1.2.jar
+                          /usr/share/java/commons-logging.jar /usr/share/java/commons-httpclient.jar"/>
       </manifest>
     </jar>
     <antcall target="ovdNativeClient_install" />
