Improvement: replace popup for SM HTTP 302 by an iframe
git-svn-id: file:///home/code/svn/ovd/trunk@6724 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/Makefile.am
+++ b/client/web/web/media/image/Makefile.am
@@ -1,7 +1,8 @@
 SUBDIRS = flags \
           icons
 
-scripts_DATA = cross.png \
+scripts_DATA = close-wrap.png \
+               cross.png \
                error.png \
                favicon.ico \
                hide.png \
