Feature: CAS support
git-svn-id: file:///home/code/svn/ovd/trunk@6733 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/configure.ac.in
+++ b/client/web/configure.ac.in
@@ -96,6 +96,8 @@ Makefile
 config/Makefile
 web/Makefile
 web/applet/Makefile
+web/auth/Makefile
+web/auth/cas/Makefile
 web/includes/Makefile
 web/media/Makefile
 web/media/image/Makefile
