Bugfix: compilation failed with ovd packaging
git-svn-id: file:///home/code/svn/ovd/trunk@6750 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/windows/WebdavFS/dokan_np/makefile.inc
+++ b/ApplicationServer/windows/WebdavFS/dokan_np/makefile.inc
@@ -1,5 +1,5 @@
 INSTALLDIR=..
 
 COPYDOKANNP:
-        if not exist $(INSTALLDIR)\$(_BUILDARCH) (md $(INSTALLDIR)\$(_BUILDARCH) )
-        if exist $(OBJ_PATH)\$(O)\$(TARGETNAME).dll copy $(OBJ_PATH)\$(O)\$(TARGETNAME).dll $(INSTALLDIR)\$(_BUILDARCH)
+        if not exist "$(INSTALLDIR)\$(_BUILDARCH)" (md "$(INSTALLDIR)\$(_BUILDARCH)")
+        if exist "$(OBJ_PATH)\$(O)\$(TARGETNAME).dll" copy "$(OBJ_PATH)\$(O)\$(TARGETNAME).dll" "$(INSTALLDIR)\$(_BUILDARCH)"
