--- a/packaging/debian/ovd-slaveserver-gateway/lenny/control
+++ b/packaging/debian/ovd-slaveserver-gateway/lenny/control
@@ -3,7 +3,7 @@ Section: net
 Priority: extra
 Maintainer: Samuel Bovée <samuel@ulteo.com>
 Build-Depends: cdbs, debhelper (>= 6),
- python (>= 2.5), python-central, python-svn
+ python (>= 2.5), python-central, python-passfd, python-svn
 Standards-Version: 3.7.3
 XS-Python-Version: >= 2.5
 
