Packaging: bugfix: fix a regression (commit 6757), XB-Python-Version are necessary
git-svn-id: file:///home/code/svn/ovd/trunk@6760 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-slaveserver-gateway/lucid/control
+++ b/packaging/debian/ovd-slaveserver-gateway/lucid/control
@@ -10,5 +10,6 @@ XS-Python-Version: >= 2.6
 Package: ulteo-ovd-slaveserver-role-gateway
 Architecture: all
 Depends: ${python:Depends}, ulteo-ovd-slaveserver, openssl, python-openssl, python-passfd
+XB-Python-Version: ${python:Versions}
 Description: Ulteo Open Virtual Desktop - gateway role for slave server
  Gateway role for the Ulteo OVD slave server
