Feature: manage the configuration by role and use INI syntax$
git-svn-id: file:///home/code/svn/ovd/trunk@6764 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -1,9 +1,37 @@
+[main]
 session_manager = @SESSION_MANAGER@
+roles = aps
 
-LOG_LEVEL = error warn info debug
+[log]
+# level = 
+# can be error, warn, info, debug
+# multi occurence of 'debug' are allowed to enable deeper debug messages
+# "*" pattern is an alias to error, warn, info and debug
+level = error warn info debug
+# file =
+# the log file to use. Default is autodetect
+# 
+# thread = 1
+# use a dedicated thread for logger or not
+# default is yes
 
-# bind the gateway on a specific address, default is any (0.0.0.0)
-#GATEWAY_ADDRESS = 0.0.0.0
 
-# bind the gateway on a specific port, default is 443
-#GATEWAY_PORT = 443
+[ApplicationServer]
+# multithread = 
+# use thread system instead of multi processing
+# default is 0
+
+
+[Gateway]
+# address = 0.0.0.0
+# port = 443
+# max_process = 10
+# max_connection = 100
+# process_timeout = 60
+
+
+[FileServer]
+# user = 
+# the local system account to use for storage and permissions
+# default is ovd-fs
+#
