Feature: script can now compile all the dokan project
git-svn-id: file:///home/code/svn/ovd/trunk@6782 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/windows/WebdavFS/dokan_webdav/makefile.inc
+++ b/ApplicationServer/windows/WebdavFS/dokan_webdav/makefile.inc
@@ -1,5 +1,5 @@
 INSTALLDIR=..
 
 COPYDOKANWEBDAV:
-    if not exist "$(INSTALLDIR)\$(_BUILDARCH)" (md "$(INSTALLDIR)\$(_BUILDARCH)")
-    if exist "$(OBJ_PATH)\$(O)\$(TARGETNAME).exe" copy "$(OBJ_PATH)\$(O)\$(TARGETNAME).exe" "$(INSTALLDIR)\$(_BUILDARCH)"
+    if not exist "$(INSTALLDIR)\build" (md "$(INSTALLDIR)\build")
+    if exist "$(OBJ_PATH)\$(O)\$(TARGETNAME).exe" copy "$(OBJ_PATH)\$(O)\$(TARGETNAME).exe" "$(INSTALLDIR)\build"
