--- a/ApplicationServer/windows/WebdavFS/dokan/makefile.inc
+++ b/ApplicationServer/windows/WebdavFS/dokan/makefile.inc
@@ -1,6 +1,6 @@
 INSTALLDIR=..
 
 COPYDOKANLIB:
-        if not exist "$(INSTALLDIR)\$(_BUILDARCH)" (md "$(INSTALLDIR)\$(_BUILDARCH)")
-        if exist "$(OBJ_PATH)\$(O)\$(TARGETNAME).dll" copy "$(OBJ_PATH)\$(O)\$(TARGETNAME).dll" "$(INSTALLDIR)\$(_BUILDARCH)"
-		if exist "$(OBJ_PATH)\$(O)\$(TARGETNAME).lib" copy "$(OBJ_PATH)\$(O)\$(TARGETNAME).lib" "$(INSTALLDIR)\$(_BUILDARCH)"
+        if not exist "$(INSTALLDIR)\build" (md "$(INSTALLDIR)\build")
+        if exist "$(OBJ_PATH)\$(O)\$(TARGETNAME).dll" copy "$(OBJ_PATH)\$(O)\$(TARGETNAME).dll" "$(INSTALLDIR)\build"
+		if exist "$(OBJ_PATH)\$(O)\$(TARGETNAME).lib" copy "$(OBJ_PATH)\$(O)\$(TARGETNAME).lib" "$(INSTALLDIR)\build"
