Code cleaning: improve the way to import Platformed modules
git-svn-id: file:///home/code/svn/ovd/trunk@7002 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/setup.py.in
+++ b/OvdServer/setup.py.in
@@ -43,7 +43,7 @@ if sys.platform == "win32":
 	sys.argv.append("py2exe")
 	# Force the include of ApS because of dynamic imports
 	sys.argv.append("-p")
-	sys.argv.append("ovd.Role.ApplicationServer")
+	sys.argv.append("ovd.Role.ApplicationServer,ovd.Platform")
 
 	try:
 		import modulefinder
