--- a/packaging/debian/ovd-slaveserver-gateway/squeeze/control
+++ b/packaging/debian/ovd-slaveserver-gateway/squeeze/control
@@ -9,7 +9,7 @@ XS-Python-Version: >= 2.6
 
 Package: ulteo-ovd-slaveserver-role-gateway
 Architecture: all
-Depends: ${python:Depends}, ulteo-ovd-slaveserver, openssl, python-openssl, python-passfd
+Depends: ${python:Depends}, ulteo-ovd-slaveserver, openssl, python-openssl
 XB-Python-Version: ${python:Versions}
 Description: Ulteo Open Virtual Desktop - gateway role for slave server
  Gateway role for the Ulteo OVD slave server
