--- a/packaging/debian/ovd-slaveserver-gateway/wheezy/control
+++ b/packaging/debian/ovd-slaveserver-gateway/wheezy/control
@@ -9,6 +9,6 @@ XS-Python-Version: >= 2.6
 
 Package: ulteo-ovd-slaveserver-role-gateway
 Architecture: all
-Depends: ${python:Depends}, ulteo-ovd-slaveserver, openssl, python-openssl, python-passfd
+Depends: ${python:Depends}, ulteo-ovd-slaveserver, openssl, python-openssl
 Description: Ulteo Open Virtual Desktop - gateway role for slave server
  Gateway role for the Ulteo OVD slave server
