Improvement: throw a SM event when starting/stopping an application inside a Session
git-svn-id: file:///home/code/svn/ovd/trunk@7030 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/events/Makefile.am
+++ b/SessionManager/web/events/Makefile.am
@@ -1,6 +1,7 @@
 SUBDIRS = callbacks
 
 scripts_DATA = ServerStatusChanged.class.php \
+               SessionApplicationInstance.class.php \
                SessionStart.class.php \
                SessionStatusChanged.class.php \
                SqlFailure.class.php
