Feature: add support to kerberos authentication method
git-svn-id: file:///home/code/svn/ovd/trunk@7036 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -77,6 +77,8 @@
     <copy todir="build/resources/keymaps">
       <fileset dir="keymaps"/>
     </copy>
+    <copy file="misc/krb5.ini" todir="build/resources" />
+    <copy file="misc/login.conf" todir="build/resources" />
     <echo file="build/VERSION" message="${version}" />
     <mkdir dir="jars"/>
     <mkdir dir="dist"/>
