First draft of Scalability test documentation
git-svn-id: file:///home/code/svn/ovd/trunk@7097 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -13,6 +13,7 @@ SRC=\
 	Installation_Iso.xml \
 	NativeClient.xml \
 	Protocol.xml \
+	Scalability.xml \
 	StartASession.xml \
 	Support_Debian_Lenny.xml \
 	Support_Debian_Squeeze.xml \
