Fixing lang codes
git-svn-id: file:///home/code/svn/ovd/trunk@7108 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -9,6 +9,7 @@ scripts_DATA = ad.png \
                ao.png \
                ar2.png \
                arg.png \
+               ar-ae.png \
                ar.png \
                as.png \
                at.png \
@@ -118,6 +119,7 @@ scripts_DATA = ad.png \
                ir.png \
                is.png \
                it.png \
+               ja-jp.png \
                ja.png \
                jm.png \
                jo.png \
