--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -174,6 +174,7 @@
                 files="gnu-getopt.jar, log4j-1.2.jar, registry.jar,
                        jshortcut.jar, image4j.jar, ini4j.jar, jpedal.jar" />
     </unjar>
+    <copy file="icons/ulteo.png" todir="build/pics" />
     <jar destfile="jars/OVDExternalAppsClient.jar" basedir="build">
       <manifest>
         <attribute name="Main-Class"
