Feature: Adding VDI MasterOS/VM management backend
git-svn-id: file:///home/code/svn/ovd/trunk@7258 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/classes/Makefile.am
+++ b/SessionManager/web/classes/Makefile.am
@@ -31,7 +31,10 @@ scripts_DATA = Application.class.php \
                UsersGroup_dynamic_cached.class.php \
                UserGroup_Preferences.class.php \
                UserGroup_Rule.class.php \
-               UserGroup_Rules.class.php
+               UserGroup_Rules.class.php \
+               VDI.class.php \
+               VDI_MasterOS.class.php \
+               VDI_VM.class.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/classes
 
