--- a/SessionManager/web/classes/abstract/Makefile.am
+++ b/SessionManager/web/classes/abstract/Makefile.am
@@ -8,7 +8,8 @@ scripts_DATA = Abstract_News.class.php \
                Abstract_Task.class.php \
                Abstract_Token.class.php \
                Abstract_UserGroup_Preferences.class.php \
-               Abstract_UserGroup_Rule.class.php
+               Abstract_UserGroup_Rule.class.php \
+               Abstract_VDI.class.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/classes/abstract
 
