Backport from trunk rev6961: Make the 'reuse_address' as an option (related to r66216)
git-svn-id: file:///home/code/svn/ovd/branches/3.0@7259 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -2,6 +2,11 @@ session_manager = @SESSION_MANAGER@
 
 LOG_LEVEL = error warn info debug
 
+# server_allow_reuse_address = true|false
+# On Windows, if we authorize this parameter, two servers can bind on the same ip
+# default is true for linux and false for Windows
+# server_allow_reuse_address = 
+
 # bind the gateway on a specific address, default is any (0.0.0.0)
 #GATEWAY_ADDRESS = 0.0.0.0
 
