Feature: add Preferences by user
git-svn-id: file:///home/code/svn/ovd/trunk@7299 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/classes/abstract/Makefile.am
+++ b/SessionManager/web/classes/abstract/Makefile.am
@@ -9,6 +9,7 @@ scripts_DATA = Abstract_News.class.php \
                Abstract_Token.class.php \
                Abstract_UserGroup_Preferences.class.php \
                Abstract_UserGroup_Rule.class.php \
+               Abstract_User_Preferences.class.php \
                Abstract_VDI.class.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/classes/abstract
