--- a/SessionManager/web/admin/media/script/ajax/Makefile.am
+++ b/SessionManager/web/admin/media/script/ajax/Makefile.am
@@ -1,6 +1,7 @@
 scripts_DATA = configuration.js \
                add_del_rows.js \
                servers.js \
+               user.js \
                usergroup.js
 scriptsdir = $(datadir)/ulteo/sessionmanager/admin/media/script/ajax
 EXTRA_DIST = $(scripts_DATA)
