Bugfix: typo: wrong file name in Makefile
git-svn-id: file:///home/code/svn/ovd/trunk@7300 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/classes/Makefile.am
+++ b/SessionManager/web/classes/Makefile.am
@@ -32,7 +32,7 @@ scripts_DATA = Application.class.php \
                UserGroup_Preferences.class.php \
                UserGroup_Rule.class.php \
                UserGroup_Rules.class.php \
-               User_Preferences.class \
+               User_Preferences.class.php \
                VDI.class.php \
                VDI_MasterOS.class.php \
                VDI_VM.class.php
