Bugfix #250 (from bug in r7117): wrong flag name
git-svn-id: file:///home/code/svn/ovd/trunk@7319 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -55,7 +55,7 @@ scripts_DATA = ad.png \
                cx.png \
                cy.png \
                cz.png \
-               da.png \
+               da-dk.png \
                de.png \
                dj.png \
                dk.png \
