--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -282,7 +282,9 @@
   </target>
 
   <target name="applet.jar" description="sign jar applets" depends="applet" >
-    <copy file="icons/ulteo.png" todir="build/pics" />
+    <copy todir="build/pics">
+      <filelist dir="icons" files="ulteo.png default_icon.png" />
+    </copy>
     <copy file="windowsPathsJNI/libWindowsPaths.dll"
           todir="build/resources/WindowsLibs/32" />
     <copy file="required_libraries/libXClientArea/32/libXClientArea.so"
