Backport from trunk rev7338: Bugfix: missing 'default application' icon in OVDExternalAppsClient.jar
git-svn-id: file:///home/code/svn/ovd/branches/3.0@7345 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -165,7 +165,9 @@
                 files="gnu-getopt.jar, log4j-1.2.jar, registry.jar,
                        jshortcut.jar, image4j.jar, ini4j.jar, jpedal.jar" />
     </unjar>
-    <copy file="icons/ulteo.png" todir="build/pics" />
+    <copy todir="build/pics">
+      <filelist dir="icons" files="ulteo.png default_icon.png" />
+    </copy>
     <jar destfile="jars/OVDExternalAppsClient.jar" basedir="build">
       <manifest>
         <attribute name="Main-Class"
