Improvement: gateway: admin and web client interface restriction management ; gateway can now used separate SM and WC
git-svn-id: file:///home/code/svn/ovd/trunk@7369 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -34,6 +34,14 @@ level = error warn info debug
 # max_connection = 100
 # process_timeout = 60
 
+# web_client = [ip]
+# determine the OVD Web Client IP
+# default value is empty, so the web client is not redirected
+
+# admin_redirection = true|false
+# enable the web admin redirection
+# default value is 'false'
+
 
 [FileServer]
 # user = 
