Bugfix: add a missing lpr dependency needed by java for printing
git-svn-id: file:///home/code/svn/ovd/trunk@7371 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-java-clients/lucid/control
+++ b/packaging/debian/ovd-java-clients/lucid/control
@@ -14,7 +14,8 @@ Description: Ulteo Open Virtual Desktop - applets
 
 Package: ulteo-ovd-externalapps-client
 Architecture: all
-Depends: default-jre | sun-java6-jre, libovd-xclient-area, desktop-file-utils
+Depends: default-jre | sun-java6-jre, cups-bsd | lpr,
+ libovd-xclient-area, desktop-file-utils
 Recommends: ulteo-ovd-integrated-launcher
 Description: Ulteo Open Virtual Desktop - integrated client
  This application is used in the Open Virtual Desktop to display the user
